@@ -130,9 +130,17 @@ around BUILDARGS => sub {
     my $args = $class->$orig(@etc);
     if ($args->{code} and not $args->{type}) {
         $args->{type} = $type_for_code{$args->{code}};
+        if (!defined $args->{type}) {
+            require Carp;
+            Carp::croak "Bad credit card code $args->{code}";
+        }
     }
     elsif ($args->{type} and not $args->{code}) {
         $args->{code} = $code_for_type{$args->{type}};
+        if (!defined $args->{code}) {
+            require Carp;
+            Carp::croak "Bad credit card type $args->{type}";
+        }
     }
     return $args;
 };
