@@ -70,9 +70,17 @@ around BUILDARGS => sub {
     my $args = $class->$orig(@etc);
     if ($args->{code} and not $args->{label}) {
         $args->{label} = $label_for_code{$args->{code}};
+        if (!defined $args->{label}) {
+            require Carp;
+            Carp::croak "Bad return service code $args->{code}";
+        }
     }
     elsif ($args->{label} and not $args->{code}) {
         $args->{code} = $code_for_label{$args->{label}};
+        if (!defined $args->{code}) {
+            require Carp;
+            Carp::croak "Bad return service label $args->{label}";
+        }
     }
     return $args;
 };
