@@ -1,4 +1,7 @@
 {{$NEXT}}
+ - better error messages when constructing credit cards and services
+   with just the code or just the label / type, and an invalid value
+   is passed
 
 1.0.6     2014-09-16 17:37:39+01:00 Europe/London
  - fix RT #98933, you can now book a shipment with 1 package
